css/style.css
/* ... */
.nav-for-cards {
	width: 1106px;
	margin: 54px auto 32px;
}

.nav-for-cards__all {
	color: #F7D047;
	text-decoration: none;
	border-bottom: 1px dashed;
}

.nav-for-ataman {
	display: inline-block;
	margin-right: 48px;

}

.nav-for-ataman__btn {
	background-color: #EFEFEF;
	color: #5C5F66;
	font-size: 13px;
	font-weight: normal;
	padding: 5px 10px;
	margin: 6px;
}

.nav-for-ataman__btn_green {
	background-color: #73B918;
	color: white;
}

.cards-ataman {
	width: 1114px;
	margin: 0 auto;
}

.card-ataman {
	display: inline-block;
	width: 350px;
	height: 505px;
	border-radius: 14px;
	background-color: white;
	margin: 0 28px 24px 0;
}

.card-ataman_mr0 {
	margin-right: 0;
}

.card-ataman_mb0 {
	margin-bottom: 0;
}

.card-ataman-info {
	padding: 28px;
}

.card-ataman-info__title {
	margin: 0 0 16px;
	line-height: 1;
	font-size: 29px;
	font-weight: Normal;
	font-family: Gilroy-Bold, Arial, sans-serif;
}

.card-ataman-info__circle {
	display: inline-block;
	width: 5px;
	height: 5px;
	background: #85B440;
	border-radius: 50%;
	margin-right: 4px;
}

.card-ataman-info__square-period {
	margin-bottom: 8px;
}

.card-ataman-info__square-period_bold {
	font-weight: bold;
}

.card-ataman-info__square-period_right {
	float: right;
}

.card-ataman-info__sizes-rooms {
	margin-bottom: 17px;
}

.card-ataman-info__sizes-rooms_bold {
	font-weight: bold;
}

.card-ataman-info__sizes-rooms_right {
	float: right;
}

.card-ataman-info__type {
	margin-bottom: 5px;
}

.card-ataman-info__type_right {
	float: right;
	font-weight: bold;
}

.card-ataman-info__cost {
	margin-bottom: 28px;
}

.card-ataman-info__cost_right {
	float: right;
	font-weight: bold;
}

.card-ataman-info__cost_bottom {
	vertical-align: -18px;
}

.card-ataman-info__cost_green {
	font-size: 31px;
	font-weight: normal;
	font-family: Gilroy-Bold, Arial, sans-serif;
	color: #73B918;
}

.card-ataman-info__btn {
	display: inline-block;
	background-color: #FEAA01;
	padding: 12px 26px 12px;
	border-radius: 5px;
	color: #FCFCFE;
	text-decoration: none;
	font-weight: Normal;
	font-family: Gilroy-Bold, Arial, sans-serif;
}

.card-ataman-info__btn_img {
	margin: 0 0 3px 10px;
}

.card-ataman-info__special {
	width: 90px;
	float: right;
	text-align: right;
	margin-top: 11px;
	font-size: 9px;
	color: #B8B8BA;
}

.card-ataman-info__special_img {
	display: block;
	float: left;
	margin-top: 4px;
}

.Your-house>nav>button {
	background-color: #EFEFEF;
	color: #333438;
	width: 158px;
	height: 40px;
	border-radius: 7px;
	margin: 15px;
	font-size: 18px;
}

.Your-house>nav>.green-btn {
	background-color: rgb(103, 182, 30);
}

.Your-house h3 {
	font-size: 35px;
	color: #4C4F56;
	font-weight: Normal;
	font-family: Gilroy-Bold, Arial, sans-serif;
}

.Your-house-agreement {
	font-size: 18px;
	color: #4C4F56;
}

.Your-house-download {
	font-size: 15px;
	color: #505457;
	text-decoration: none;
}

.gifts {
	width: calc(2 * 533px + 50px);
	margin-left: auto;
	margin-right: auto;
	margin-top: 100px;
}
.gifts__title {
	text-align: center;
}
.gifts__title_bold {
	font-weight: Normal;
	font-family: Gilroy-Bold, Arial, sans-serif;
}
.gifts__block {
	width: 533px;
	display: inline-block;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
}
.gifts__block_first {
	margin-right: 36px;
}
.gifts__block_bg1 {
	background-image: url("../images/image6.jpg");
}
.gifts__block_bg2 {
	background-image: url("../images/image7.jpg");
}
.ratio-55pr {
	padding-top: 55%;
}
.gifts__subtitle {
	font-size: 27px;
	font-weight: 600;
	position: absolute;
	top: 47px;
	left: 44px;
	color: white;
	margin: 0;
	width: 60%;
}
.gifts__subtitle_second{
	width: 50%;
}
.gifts__text {
	position: absolute;
	top: 120px;
	left: 44px;
	width: 257px;
	font-size: 14px;
	color: white;
}
.gifts__btn {
	display: inline-block;
	background-color: white;
	border-radius: 5px;
	font-weight: Normal;
	font-family: Gilroy-Bold, Arial, sans-serif;
	text-decoration: none;
	text-transform: uppercase;
	color: black;
	padding: 14px 56px;
	position: absolute;
	bottom: 44px;
	left: 44px;
}
.gifts__discount {
	font-size: 10px;
	font-weight: Normal;
	font-family: Gilroy-Medium, Arial, sans-serif;
	position: absolute;
	bottom: 100px;
	right: 60px;
	color: white;
	width: 10%;
	text-transform: uppercase;
	background: rgba(0,0,0, 0.3);
	padding: 16px 12px 20px 16px;
	border-radius: 27px 0;
}
.gifts__discount_big {
	font-size: 34px;
	font-weight: Bold;
}
.gifts__discount_middle {
	font-size: 14px;
}

@media (max-width: 575px) {
	.gifts__title {
		display: inline-block;
		margin: 0 20px 20px;
		width: 90vw;
		font-size: 20px;
	}
	.gifts__block {
		display: block;
		width: 80vw;
		max-width: 600px;
		margin-right: 10vw;
		margin-left: 10vw;
	}
	.gifts__block_first {
		margin-bottom: 5vw;
	}
	.gifts__subtitle {
		width: 70%;
		font-size: 14px;
		top: 15px;
		left: 20px;
	}
	.gifts__text {
		top: 50px;
		left: 20px;
		width: 60%;
		font-size: 8px;
	}
	.gifts__btn {
		font-size: 8px;
		padding: 6px 12px;
		bottom: 15px;
		left: 20px;
	}
	.gifts__discount {
		width: 15%;
		bottom: 50px;
		right: 20px;
		padding: 10px 6px 10px 16px;
		font-size: 8px;
	}
	.gifts__discount_big {
		font-size: 16px;
	}
	.gifts__discount_middle {
		font-size: 10px;
	}
}

@media (min-width: 576px) and (max-width: 800px) {
	.gifts__title {
		display: inline-block;
		margin: 0 20px 20px;
		width: 90vw;
		font-size: 30px;
	}
	.gifts__block {
		display: block;
		width: 80vw;
		max-width: 600px;
		margin-right: 10vw;
		margin-left: 10vw;
	}
	.gifts__block_first {
		margin-bottom: 5vw;
	}
	.gifts__subtitle {
		font-size: 20px;
		top: 30px;
		left: 30px;
	}
	.gifts__text {
		top: 90px;
		left: 30px;
		width: 240px;
		font-size: 12px;
	}
	.gifts__btn {
		padding: 10px 40px;
		bottom: 30px;
		left: 30px;
	}
	.gifts__discount {
		width: 15%;
		bottom: 20vh;
		right: 30px;
		padding: 16px 6px 20px 16px;
	}
}
/* ... */

